# RobotFrame

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml  setup.py
configs/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  sunplus_camera_info.yaml  sunplus_param_camera_front.yaml
description/: box.xacro  cameras.xacro  gazebo_control.xacro  geometry.xacro  grippers.xacro  grippers_joints.xacro  inertial.xacro  inertial_macros.xacro  ladle.xacro  ladle_joints.xacro  lidars.xacro  materials.xacro  robot.urdf.xacro  wheels.xacro
interactive/: calculate_robot_frame.ipynb  practise1.ipynb
launch/: launch_sim.launch.py  rsp.launch.py
launchers/: __init__.py  _kill.sh  cameras.launch.py  gazebo.launch.py  kill.py  robot.launch.py  ros1_rviz.launch  rviz.launch.py  teleop.launch.py  utils.py
robot_frame/: __init__.py
robot_frame/configs/: controllers.yaml  gazebo_params.yaml  joy_params.yaml  joy_teleop_params.yaml  sunplus_camera_info.yaml  sunplus_param_camera_front.yaml  teleop_multiplexer_params.yaml
robot_frame/description/: box.xacro  cameras.xacro  gazebo_controller.xacro  geometry.xacro  inertial_macros.xacro  ladle.xacro  lidars.xacro  manipulator_joints.xacro  manipulators.xacro  materials.xacro  robot.urdf.xacro  robot_description.xml  ros2_controller.xacro  wheels.xacro
robot_frame/launchers/: cameras.launch.py  controllers.py  gazebo.launch.py  joystick_tx12.launch.py  multiplexer.launch.py  stopall.py  (+5 more)
rviz/: environment.rviz  environmentx.rviz
scripts/: build_start.sh  run.sh
sources/: enumcam.py
worlds/: cube.world
(+40 files in other folders)
